namespace FakeStore.ViewModel;

public class ItemCartRead
{
    public int ProductId { get; set; }

    public int Quantity { get; set; }
}
